# web_notes

./: .gitmodules  Dockerfile  a.out  build_files.txt  build_up  build_up.py  cat  emsdk_build  gen_files.cmd  gitp.cmd  gitp.sh  index.html  memory.html  message.jsp  notes.cpp  notes_comp.js  notes_compile.cmd  output  pack.cmd  pack.sh  package-lock.json  perge  style.css  test.html  tmpfile.cmd  try_build  update
WEB-INF/: web.xml
WEB-INF/classes/: CORSFilter.java
js/: glu.js  main.js  main_depre.js  style.css
js/jquery-ui-1.13.0/: jquery-ui.css  jquery-ui.js  jquery-ui.min.css  jquery-ui.min.js  jquery-ui.structure.min.css  jquery-ui.theme.css  jquery-ui.theme.min.css
js/src/: main.js  sockets.js  userenter.js
old/: index.html
safety/: CMakeLists.txt  cc20_dev.cpp  cc20_dev.hpp  cc20_multi.cpp  cc20_multi.h  cc20_parts.h  cc20_single_thrd.cpp  cc20_single_thrd.h  empp.cpp  pdm-service.hpp
src/: main.ts  notes.cpp  package-lock.json  package.json  sockets.ts  tsconfig.json  userenter.ts
static/: signin.html  signup.html
test/: Makefile  safe_test  sock.js
www/en-US/: 1033.2fab3609c184a6e5.js  1033.a04063069a8f6afc.js  1217.07da69c10b3253ac.js  1217.7a3b0063ce213ecd.js  1536.e15b71f7e6b6c857.js  1709.1c9fd6d814ab7bad.js  1709.5cd5593155949142.js  2073.e70441b4d1a3f036.js  2349.3fb70fa558fe0c7f.js  2349.694303c9253fc4e9.js  2933.88bb9fa7364f3596.js  2933.8d0fc21fe1893969.js  3262.69535f968d19392b.js  3583.edec0fec92333a59.js  3648.e51036314fc2ec24.js  3804.3068503716761661.js  3804.6b3b1691f23c146e.js  388.3d8b6e90da8f7cbb.js  4174.2c02bd7264a07155.js  (+41 more)
(+127 files in other folders)
